Show prompt for device orientation access if the client does not implement the corresponding API delegate https://bugs.webkit.org/show_bug.cgi?id=196971 <rdar://problem/49945840>

Reviewed by Alex Christensen.

Show prompt for device orientation access if the client does not implement the corresponding
API delegate, instead of rejecting access by default.

* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::shouldAllowDeviceOrientationAndMotionAccess):
* UIProcess/Cocoa/WKOrientationAccessAlert.h: Added.
* UIProcess/Cocoa/WKOrientationAccessAlert.mm: Added.
(WebKit::presentOrientationAccessAlert):
* WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/211247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244360 268f45cc-cd09-0410-ab3c-d52691b4dbfc